# stock-price-prediction-practice

./: .gitignore  hello.py  pyproject.toml
configs/: config.yaml
configs/model/: lstm.yaml  xgb.yaml
notebook/: baseline.ipynb  exp01_enrich_features.ipynb  exp_02_pfi_analysis.ipynb  test.ipynb
src/: metrics.py  visualize.py
src/analysis/: pfi_analyzer.py
src/features/: feature_engineering.py
src/models/: model.py  model_xgb.py
src/utils/: env.py  logger.py
utils/: env.py
