[project]
name = "stock-prediction-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "signate>=0.9.10",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
